<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_show_row_items"
          android:title="@string/row_items_count"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_show_prices"
          android:title="@string/show_prices"
          android:orderInCategory="100"
          android:checkable="true"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_with_0_ost"
          android:title="@string/with_0_ost"
          android:orderInCategory="100"
          android:checkable="true"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_price_type"
          android:title="@string/logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_kol_foto_in_row"
          android:title="@string/kol_foto_in_row"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_fake2"
            android:title="-------"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item android:id="@+id/menu_view_current_order"
            android:title="@string/current_order"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item android:id="@+id/menu_view_past_orders"
            android:title="@string/past_orders"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item android:id="@+id/menu_fake3"
            android:title="-------"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item android:id="@+id/menu_update_data"
          android:title="@string/update_data"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_upload_rest_of_the_photos"
          android:title="@string/menu_upload_rest_of_the_photos"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_fake"
          android:title="-------"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_logout"
          android:title="@string/logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
