<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_price_type"
          android:title="@string/logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_kol_foto_in_row"
          android:title="@string/kol_foto_in_row"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_hidden_tovs"
          android:title="@string/hidden_tovs"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_update_data"
          android:title="@string/update_data"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_upload_rest_of_the_photos"
          android:title="@string/menu_upload_rest_of_the_photos"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_fake"
          android:title="-------"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_logout"
          android:title="@string/logout"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
