<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_1"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/white"
        />

    <!-- Login progress -->
    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/content_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/colorAccent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".screens.LoginActivity"
        >

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8BFFFFFF"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/loginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/etLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_code"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:backgroundTint="@color/colorPrimary22"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="normal"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:backgroundTint="@color/colorPrimary22"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/keyLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/keyET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_key"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:backgroundTint="@color/colorPrimary22"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/requestKey"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@drawable/btn_color_selector"
                android:letterSpacing="0.1"
                android:text="@string/action_request_key"
                android:textColor="#fff"
                android:textStyle="bold"
                />


            <Button
                android:id="@+id/btSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="-6dp"
                android:backgroundTint="@drawable/btn_color_selector"
                android:letterSpacing="0.1"
                android:text="@string/action_sign_in"
                android:textColor="#fff"
                android:textStyle="bold"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
